# r5py_isochrones

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
data/: auckland.gpkg  auckland_points.geojson
notebooks/: examples.ipynb  isochrone.ipynb
r5py_isochrones/: __init__.py  main.py
